# access3-share

./: .gitmodules  CMakeLists.txt  COPYRIGHT.txt  README.md
.github/build-ci/data/: compiler.spack.yaml  standard.json
.github/build-ci/manifests/: gcc.spack.yaml.j2  intel-libonly.spack.yaml.j2  intel.spack.yaml.j2  oneapi.spack.yaml.j2
.github/workflows/: ci.yml  compilation.yml  model-build-test-ci.yml
CDEPS/: CMakeLists.txt
CDEPS/extra_sources/: datm_datamode_era5_mod_UFS.F90  datm_datamode_jra55do_mod.F90
CDEPS/patches/: atm_comp_nuopc.F90.patch  dshr_strdata_mod.F90.patch  dshr_stream_mod.F90.patch
CMEPS/: CMakeLists.txt
CMEPS/extra_sources/: esmFldsExchange_ufs_mod.F90
cmake/: Access3BinInstall.cmake  Access3LibInstall.cmake  Access3ShareConfig.cmake.in  AddPatchedSource.cmake  FindESMF.cmake  FortranLib.cmake  PatchFile.cmake  UseLlvmArchive.cmake
share/: CMakeLists.txt
share/patches/: nuopc_shr_methods.F90.patch  shr_const_mod.F90.patch
